<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/water" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="0dp"
        android:text="@string/CreateAccount"
        android:textColor="@color/colorWhite"
        android:textSize="40dp"
        android:textStyle="italic"
        android:typeface="serif" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignEnd="@+id/editText4"
        android:layout_alignRight="@+id/editText4"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="phone" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="76dp"
        android:layout_height="68dp"
        android:layout_below="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="29dp"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="106dp"
        android:layout_height="33dp"
        android:layout_below="@+id/editText5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_toRightOf="@+id/imageButton"
        android:text="@string/upload_photo" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/credit"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_below="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignEnd="@+id/editText6"
        android:layout_alignRight="@+id/editText6"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/button"
        android:text="@string/create" />

</RelativeLayout>