<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/images" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="40dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="31dp"
                android:text="Sign In"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/signin"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText15"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-26dp"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editText16"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText15"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText16"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/button"
                android:onClick="signin"


                android:text="@string/signIn"

                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_alignStart="@+id/button"
                android:layout_alignLeft="@+id/button"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:onClick="change"
                android:text="@string/forget"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:onClick="createAccount"
                android:text="@string/Account"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignEnd="@+id/textView3"
                android:layout_alignRight="@+id/textView3"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="51dp"
                android:layout_marginRight="51dp"
                android:text="@string/Seller"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>